--- a/.github/workflows/MAIN.yml
+++ b/.github/workflows/MAIN.yml
@@ -17,7 +17,7 @@ jobs:
       - name: generate github contribution snake svg
         uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: ${{ github.repository_owner }}
+          github_user_name: ${{ github.1RN21CS056 }}
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
