--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,15 +14,11 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Generate the snake
-        id: snake-gif
         uses: Platane/snk@master
         with:
           github_user_name: 1RN21CS056
           gif_out_path: dist/github-contribution-grid-snake.gif
           svg_out_path: dist/github-contribution-grid-snake.svg
-
-      - name: List files in dist
-        run: ls -R dist
 
       - name: Show git status
         run: git status
@@ -38,7 +34,7 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
-          target_branch: output
+          target_branch: gh-pages
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
